--- a/templates/index.html
+++ b/templates/index.html
@@ -1,54 +1,55 @@
 <!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>オススメ記事検索</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <style>
-    .root {
-      max-width: 600px;
-      margin: 50px auto;
-    }
-  </style>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</head>
-<body>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <div class="root">
+    <style>
+      .root {
+        max-width: 800px;
+        padding: 50px;
+        margin: 0 auto;
+      }
+    </style>
+    <title>オススメ記事検索</title>
+  </head>
+  <body>
+    <div class="root">
 
-    <h1>オススメ記事検索をしよう</h1>
-    <br>
-
-    <!--エラー表示-->
-    {% if error %}
-      <p class="alert-danger">{{ error }}</p>
+      <h1>オススメ記事検索をしよう</h1>
       <br>
-    {% endif %}
 
-    <!--検索入力欄-->
-    <form action="/search">
-      <div class="form-group">
-        <input type="text" name="query" value="{% if query %}{{ query }}{% endif %}" placeholder="キーワードを入力してください" class="form-control">
+      <!--エラー表示-->
+      {% if error %}
+        <p class="alert-danger">{{ error }}</p>
         <br>
-        <input type="submit" value="検索する" class="btn btn-primary">
-      </div>
-    </form>
-    <br>
+      {% endif %}
 
-    <!--検索結果-->
-    {% if articles %}
-      <h2>検索結果</h2>
-      <ul class="list-group">
-        {% for article in articles %}
-          <li class="list-group-item"><a href="{{ article[1] }}">{{ article[0] }}</a></li>
-        {% endfor %}
-      </ul>
-    {% endif %}
+      <!--検索入力欄-->
+      <form action="/search">
+        <div class="form-group">
+          <input type="text" name="query" value="{% if query %}{{ query }}{% endif %}" placeholder="キーワードを入力してください" class="form-control">
+          <br>
+          <input type="submit" value="検索する" class="btn btn-primary">
+        </div>
+      </form>
+      <br>
 
-  </div>
+      <!--検索結果-->
+      {% if articles %}
+        <h2>検索結果</h2>
+        <ul class="list-group">
+          {% for article in articles %}
+            <li class="list-group-item"><a href="{{ article['link'] }}">{{ article['title'] }}</a></li>
+          {% endfor %}
+        </ul>
+      {% endif %}
 
-</body>
+    </div>
+
+  </body>
 </html>
